--- a/The Book - Web/cloudbuild.yaml
+++ b/The Book - Web/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   # Build the Docker image
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/the-book-382116/the-book", "."]
+    args: ["build", "-t", "gcr.io/the-book-382116/the-book", "./The Book - Web/"]
 
   # Push the Docker image to the Container Registry
   - name: "gcr.io/cloud-builders/docker"
@@ -9,7 +9,7 @@ steps:
 
   # Deploy the new image to Cloud Run
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ["run", "deploy", "SERVICE_NAME", "--image", "gcr.io/the-book-382116/the-book", "--region", "europe-west1", "--platform", "managed", "--allow-unauthenticated"]
+    args: ["run", "deploy", "the-book", "--image", "gcr.io/the-book-382116/the-book", "--region", "europe-west1", "--platform", "managed", "--allow-unauthenticated"]
 
 images:
   - "gcr.io/the-book-382116/the-book"
