--- a/The Book - Web/requirements.txt
+++ b/The Book - Web/requirements.txt
@@ -2,6 +2,8 @@ firebase-admin==5.0.0
 google-cloud-firestore>=2.1.0,<3.0dev
 openai~=0.27.0
 Flask~=2.0.2
+Flask-Mail~=0.9.1
+Flask_WTF~=1.1.1
 Markdown~=3.4.1
 requests~=2.28.2
 Pillow~=9.4.0
