--- a/The Book - Web/requirements.txt
+++ b/The Book - Web/requirements.txt
@@ -1,9 +1,6 @@
 firebase-admin==5.0.0
 google-cloud-firestore>=2.1.0,<3.0dev
 openai~=0.27.0
-Flask~=2.0.2
-Flask-Mail~=0.9.1
-Flask_WTF~=1.1.1
 Markdown~=3.4.1
 requests~=2.28.2
 Pillow~=9.4.0
@@ -11,3 +8,8 @@ google-cloud-storage~=2.7.0
 json5~=0.9.11
 PyGithub~=1.58.1
 TTS
+fastapi~=0.68.1
+uvicorn[standard]~=0.17.1
+fastapi-mail~=0.4.4
+starlette-csrf~=1.0.0
+jinja2<3.0.0
