--- a/The Book - Web/requirements.txt
+++ b/The Book - Web/requirements.txt
@@ -4,6 +4,7 @@ openai~=0.27.0
 Flask~=2.0.2
 Flask-Mail~=0.9.1
 Flask_WTF~=1.1.1
+flask-restplus~=0.13.0
 Markdown~=3.4.1
 requests~=2.28.2
 Pillow~=9.4.0
